--- a/build-metadata/manifest.json
+++ b/build-metadata/manifest.json
@@ -5,5 +5,6 @@
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
         "BD-DBs_Content_API-1.0.1"
-    ]
+    ],
+    "website_url": "https://github.com/dFuZer/unlisted-entities"
 }
