--- a/UnlistedEntities.csproj
+++ b/UnlistedEntities.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    <!-- BepInEx Properties -->
     <PropertyGroup>
         <AssemblyName>UnlistedEntities</AssemblyName>
         <Product>Unlisted Entities</Product>
@@ -12,40 +13,128 @@
         <LangVersion>latest</LangVersion>
         <NoWarn>NU1701</NoWarn>
     </PropertyGroup>
+
+    <!-- Enable Nullable for better IDE null-checking -->
     <PropertyGroup>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <!-- Set NuGet Sources -->
     <PropertyGroup>
         <RestoreAdditionalProjectSources>
             https://api.nuget.org/v3/index.json;
             https://nuget.bepinex.dev/v3/index.json
         </RestoreAdditionalProjectSources>
     </PropertyGroup>
+
+    <!-- Embed Debug Symbols for Easier Debugging -->
     <PropertyGroup>
         <DebugSymbols>true</DebugSymbols>
         <DebugType>embedded</DebugType>
+        <!--
+        Trim the project path to prevent players from potentially
+        viewing Private Information in stack traces.
+        -->
         <PathMap>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))=./</PathMap>
     </PropertyGroup>
 
+    <!-- Primary Package References -->
     <ItemGroup>
         <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all"/>
-        <PackageReference Include="UnityEngine.Modules" Version="2022.3.10" PrivateAssets="all"/>
-        <PackageReference Include="ContentWarning.GameLibs.Steam" Version="*-*" PrivateAssets="all"/>
     </ItemGroup>
-    
+
+    <ItemGroup>
+        <Compile Remove="decomp\**" />
+        <None Remove="decomp\**" />
+    </ItemGroup>
+
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all"/>
     </ItemGroup>
 
-    <!-- <Target Name="CopyOutputFileToGame" AfterTargets="Build">
-        <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(CWDir)\Plugins\$(Product)" />
-    </Target> -->
-
     <ItemGroup>
-        <Reference Include="Assembly-CSharp">
-            <HintPath>"C:\Program Files (x86)\Steam\steamapps\common\Content Warning\Content Warning_Data\Managed\Assembly-CSharp.dll"</HintPath>
+        <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2" PrivateAssets="all" />
+        <Reference Include="0Harmony">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\0Harmony.dll</HintPath>
         </Reference>
+        <Reference Include="Assembly-CSharp">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\Assembly-CSharp.dll</HintPath>
+          <Publicize>true</Publicize>
+        </Reference>
+        <Reference Include="BepInEx">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\BepInEx.dll</HintPath>
+        </Reference>
+        <Reference Include="LocalizationAssembly">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\LocalizationAssembly.dll</HintPath>
+        </Reference>
+        <Reference Include="PhotonRealtime">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\PhotonRealtime.dll</HintPath>
+        </Reference>
+        <Reference Include="PhotonUnityNetworking">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\PhotonUnityNetworking.dll</HintPath>
+        </Reference>
+        <Reference Include="Sirenix.Serialization">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\Sirenix.Serialization.dll</HintPath>
+        </Reference>
+        <Reference Include="System"/>
+        <Reference Include="System.Core"/>
+        <Reference Include="System.Data"/>
+        <Reference Include="System.Xml"/>
+        <Reference Include="Unity.AI.Navigation">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\Unity.AI.Navigation.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AIModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.AIModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AssetBundleModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.CoreModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.InputLegacyModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+        </Reference>
+        <Reference Include="Unity.TextMeshPro">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.InputModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.InputModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AnimationModule">
+            <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.UI">
+            <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.UI.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.UIModule">
+            <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.UIModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AudioModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.PhysicsModule">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+        </Reference>
+        <Reference Include="Zorro.Core.Runtime">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\Zorro.Core.Runtime.dll</HintPath>
+        </Reference>
+        <Reference Include="Zorro.UI.Runtime">
+          <HintPath>$(CWDir)\Content Warning_Data\Managed\Zorro.UI.Runtime.dll</HintPath>
+        </Reference>
+        <Reference Include="Photon3Unity3D">
+            <HintPath>$(CWDir)\Content Warning_Data\Managed\Photon3Unity3D.dll</HintPath>
+            </Reference>
+            <Reference Include="Unity.Mathematics">
+            <HintPath>$(CWDir)\Content Warning_Data\Managed\Unity.Mathematics.dll</HintPath>
+            </Reference>
+            <Reference Include="UnityEngine.ParticleSystemModule">
+            <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.ParticleSystemModule.dll</HintPath>
+            </Reference>
     </ItemGroup>
 
     <ItemGroup>
